# auth0_ai_chat_bot_demo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: pull_request_template.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  db.py  main.py
backend/app/auth/: dependencies.py  provider.py
backend/app/chat/: models.py  router.py  service.py
backend/app/ciba/: pending_orders.py  router.py  service.py
backend/app/conversations/: router.py  service.py
backend/app/data/: router.py  service.py
backend/app/data/catalogs/: README.md
backend/app/fga/: client.py  orders_access.py
backend/app/llm/: anthropic.py  base.py  ollama.py  openai_provider.py  registry.py  router.py
backend/app/mcp_client/: manager.py  models.py  oauth.py
backend/app/mcp_routes/: router.py
docs/: API-OVERVIEW.md  ARCHITECTURE.md  DEVELOPMENT.md  README.md  SCREENSHOTS.md
docs/images/: README.md
fga/sample-model/: README.md  authorization-model.fga
frontend/: .env.local.example  .gitignore  README.md  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/components/: ChatInput.tsx  ChatWindow.tsx  McpServerManager.tsx  McpToolCall.tsx  MessageBubble.tsx  ModelSelector.tsx  ProductCatalogToolView.tsx  Sidebar.tsx
frontend/src/app/profile/: page.tsx
frontend/src/lib/: api.ts  ordersListShortcut.ts  stripAssistantArtifacts.ts
frontend/src/lib/hooks/: useChat.ts  (+1 more)
(+1 files in other folders)
